--- a/projects/playground/src/app/app.component.scss
+++ b/projects/playground/src/app/app.component.scss
@@ -1,4 +1,24 @@
 :host {
-  display: block;
-  padding: 20px;
+  display: inline-block;
+  text-align: center;
+  padding: 8px;
+  margin: 16px;
+  border-radius: 4px;
+  background: #fafafa;
+  box-shadow: 3px 1px -2px rgba(0, 0, 0, 0.2), 2px 2px 0 rgba(0, 0, 0, 0.14), 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+  .interactive-card {
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
+    margin: 8px;
+  }
+
+  .interactive-card--action-container {
+    display: inline-block;
+  }
+
+  .interactive-card--form-field {
+    display: block;
+  }
 }
