--- a/projects/playground/src/styles.scss
+++ b/projects/playground/src/styles.scss
@@ -8,4 +8,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
