--- a/projects/playground/src/app/app.component.scss
+++ b/projects/playground/src/app/app.component.scss
@@ -3,6 +3,8 @@
   text-align: center;
   padding: 8px;
   margin: 16px;
+  max-height: calc(100% - 16px);
+  overflow: auto;
   border-radius: 4px;
   background: #fafafa;
   box-shadow: 3px 1px -2px rgba(0, 0, 0, 0.2), 2px 2px 0 rgba(0, 0, 0, 0.14), 1px 5px 0 rgba(0, 0, 0, 0.12);
