style: format the code using prettier

--- a/projects/playground/src/app/app.component.html
+++ b/projects/playground/src/app/app.component.html
@@ -1,31 +1,51 @@
 <ng-container *ngTemplateOutlet="singleAction; context: { $implicit: group1, title: 'Main group' }"></ng-container>
 
-<br>
+<br />
 
-<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: button1  }"></ng-container>
-<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: link1  }"></ng-container>
-<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: dropdown1  }"></ng-container>
-<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: menuItem1  }"></ng-container>
-<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: dropdown2  }"></ng-container>
+<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: button1 }"></ng-container>
+<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: link1 }"></ng-container>
+<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: dropdown1 }"></ng-container>
+<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: menuItem1 }"></ng-container>
+<ng-container *ngTemplateOutlet="singleAction; context: { $implicit: dropdown2 }"></ng-container>
 
 <ng-template #singleAction let-action let-title="title">
   <mat-card class="interactive-card">
     <mat-card-header>
-      <mat-card-title [innerHTML]="title || (action.title$ | async) || (action.icon$ | async) || 'No title'"></mat-card-title>
+      <mat-card-title
+        [innerHTML]="title || (action.title$ | async) || (action.icon$ | async) || 'No title'"
+      ></mat-card-title>
       <mat-card-subtitle>{{ getActionType(action) }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <mat-form-field class="interactive-card--form-field">
-        <input #titleInput matInput placeholder="Button title" [value]="action.title$ | async" (keyup)="action.setTitle(titleInput.value)">
+        <input
+          #titleInput
+          matInput
+          placeholder="Button title"
+          [value]="action.title$ | async"
+          (keyup)="action.setTitle(titleInput.value)"
+        />
       </mat-form-field>
       <mat-form-field class="interactive-card--form-field">
-        <input #iconInput matInput placeholder="Button icon" [value]="action.icon$ | async" (keyup)="action.setIcon(titleInput.value)">
+        <input
+          #iconInput
+          matInput
+          placeholder="Button icon"
+          [value]="action.icon$ | async"
+          (keyup)="action.setIcon(titleInput.value)"
+        />
       </mat-form-field>
       <mat-form-field class="interactive-card--form-field">
-        <input #iconInput matInput placeholder="Button aria label" [value]="action.ariaLabel$ | async" (keyup)="action.setAriaLabel(titleInput.value)">
+        <input
+          #iconInput
+          matInput
+          placeholder="Button aria label"
+          [value]="action.ariaLabel$ | async"
+          (keyup)="action.setAriaLabel(titleInput.value)"
+        />
       </mat-form-field>
       <mat-checkbox [checked]="action.disabled$ | async" (change)="toggleDisabled(action)">Disabled</mat-checkbox>
-      <br>
+      <br />
       <mat-checkbox [checked]="action.visible$ | async" (change)="toggleVisible(action)">Visible</mat-checkbox>
     </mat-card-content>
     <mat-card-actions>
@@ -34,10 +54,10 @@
   </mat-card>
 </ng-template>
 
-<br>
-<br>
+<br />
+<br />
 <mat-divider></mat-divider>
-<br>
+<br />
 
 <mat-card>
   <span>Current route: </span>
